--- a/src/ViveCortelazor/Resources/Views/Blog/Blog.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Blog/Blog.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Blog Cortelazor" xml:space="preserve">
+    <value>Blog and News about Cortelazor la Real</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Discover the latest news, events, and curiosities from Cortelazor la Real. Stay updated on life in this beautiful village in the Sierra de Aracena.</value>
   </data>
