--- a/src/ViveCortelazor/Resources/Views/Blog/Blog.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Blog/Blog.es.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Blog Cortelazor" xml:space="preserve">
+    <value>Blog y Noticias sobre Cortelazor la Real</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Descubre las últimas noticias, eventos y curiosidades de Cortelazor la Real. Mantente informado sobre la vida en este hermoso pueblo de la Sierra de Aracena.</value>
   </data>
