Add links to where to eat #88

--- a/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
@@ -139,7 +139,7 @@
     <value>Walking through its cobbled streets, you'll discover the essence of mountain architecture, with white houses that contrast with the green of the surrounding fields. The rich heritage of [**Cortelazor**](/en) is reflected in its **18th-century church**, its ancient fountains and washing places, and the numerous [**hiking trails**](/en/hiking) that connect the village with other corners of the sierra.</value>
   </data>
   <data name="Introduction3" xml:space="preserve">
-    <value>In addition to its natural beauty, [**Cortelazor**](/en) is a place where **traditional gastronomy** plays a fundamental role. Products derived from **Iberian pork, honey, artisanal cheeses, and mountain stews** are just some of the delicacies you can enjoy in its taverns and bars.
+    <value>In addition to its natural beauty, [**Cortelazor**](/en) is a place where [**traditional gastronomy**](/en/where-to-eat) plays a fundamental role. Products derived from **Iberian pork, honey, artisanal cheeses, and mountain stews** are just some of the delicacies you can enjoy in its taverns and bars.
 
 If you're looking for an authentic experience in contact with nature, [**history**](/en/history), and culture of the **Sierra de Aracena**, [**Vive Cortelazor**](/en) is your perfect guide to discover everything this wonderful village has to offer.</value>
   </data>
