--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -139,7 +139,7 @@
     <value>Paseando por sus calles empedradas, descubrirás la esencia de la arquitectura serrana, con casas blancas que contrastan con el verde de los campos que la rodean. La riqueza patrimonial de [**Cortelazor**](/es) se refleja en su **iglesia del siglo XVIII**, en sus antiguas fuentes y lavaderos, y en las numerosas [**rutas de senderismo**](/es/senderismo) que conectan el pueblo con otros rincones de la sierra.</value>
   </data>
   <data name="Introduction3" xml:space="preserve">
-    <value>Además de su belleza natural, [**Cortelazor**](/es) es un lugar donde la **gastronomía tradicional** juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
+    <value>Además de su belleza natural, [**Cortelazor**](/es) es un lugar donde la [**gastronomía tradicional**](/es/donde-comer) juega un papel fundamental. Los productos derivados del **cerdo ibérico, la miel, los quesos artesanales y los guisos serranos** son solo algunas de las delicias que podrás disfrutar en sus mesones y bares.
 
 Si buscas una experiencia auténtica en contacto con la naturaleza, la [**historia**](/es/historia) y la cultura de la **Sierra de Aracena**, [**Vive Cortelazor**](/es) es tu guía perfecta para descubrir todo lo que este maravilloso pueblo tiene para ofrecer.</value>
   </data>
