--- a/src/ViveCortelazor/Resources/Views/Accommodation/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Accommodation/Index.es.resx
@@ -117,25 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Hiking" xml:space="preserve">
-    <value>Hiking</value>
+  <data name="Accommodation" xml:space="preserve">
+    <value>Alojamiento</value>
   </data>
-  <data name="History" xml:space="preserve">
-    <value>History</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="Privacy" xml:space="preserve">
-    <value>Privacy</value>
-  </data>
-  <data name="What to do" xml:space="preserve">
-    <value>What to do</value>
-  </data>
-  <data name="Where to eat" xml:space="preserve">
-    <value>Where to eat</value>
+  <data name="Title" xml:space="preserve">
+    <value>Alojamiento en Cortelazor</value>
   </data>
   <data name="Where to sleep" xml:space="preserve">
-    <value>Where to sleep</value>
+    <value>Dónde dormir en Cortelazor</value>
   </data>
 </root>
