--- a/src/ViveCortelazor/Resources/Views/Accommodation/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Accommodation/Index.en.resx
@@ -127,7 +127,7 @@
     <value>accommodation in cortelazor, rural accommodation cortelazor, country houses cortelazor, where to stay in sierra de aracena, rural tourism cortelazor, cozy rural houses spain, cortelazor places to stay, rural getaway andalusia, country house rental sierra de aracena, rural holidays in huelva, accommodation sierra de aracena</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Accommodation in Cortelazor</value>
+    <value>Accommodation in Cortelazor - Sierra de Aracena</value>
   </data>
   <data name="Where to sleep" xml:space="preserve">
     <value>Where to sleep in Cortelazor</value>
