--- a/src/ViveCortelazor/Resources/Views/Accommodation/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Accommodation/Index.es.resx
@@ -127,7 +127,7 @@
     <value>alojamientos en cortelazor, casas rurales en cortelazor, turismo rural cortelazor, dormir en cortelazor, alojamiento sierra de aracena, casas rurales sierra de aracena, dónde alojarse en cortelazor, escapada rural huelva, turismo cortelazor la real, casa rural con encanto huelva, vacaciones rurales sierra de aracena, alquiler casa rural cortelazor</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Alojamiento en Cortelazor</value>
+    <value>Alojamiento en Cortelazor - Sierra de Aracena</value>
   </data>
   <data name="Where to sleep" xml:space="preserve">
     <value>Dónde dormir en Cortelazor</value>
