--- a/src/ViveCortelazor/Resources/Views/Accommodation/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Accommodation/Index.en.resx
@@ -124,7 +124,10 @@
     <value>Find the best rural accommodation in Cortelazor, a charming village in the Sierra de Aracena. Cozy country houses surrounded by nature, peace and authentic Andalusian lifestyle. Discover your perfect rural getaway.</value>
   </data>
   <data name="Keywords" xml:space="preserve">
-    <value>accommodation in cortelazor, rural accommodation cortelazor, country houses cortelazor, where to stay in sierra de aracena, rural tourism cortelazor, cozy rural houses spain, cortelazor places to stay, rural getaway andalusia, country house rental sierra de aracena, rural holidays in huelva, accommodation sierra de aracena</value>
+    <value>accommodation in cortelazor, rural accommodation cortelazor, country houses cortelazor, where to stay in sierra de aracena, rural tourism cortelazor, cozy rural houses spain, cortelazor places to stay, rural getaway andalusia, country house rental sierra de aracena, rural holidays in huelva, accommodation sierra de aracena, country cottages sierra de aracena, rural cottages cortelazor</value>
+  </data>
+  <data name="Rural accommodation" xml:space="preserve">
+    <value>Rural accommodation in Cortelazor</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Accommodation in Cortelazor - Sierra de Aracena</value>
