--- a/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.en.resx
@@ -149,6 +149,9 @@ If you're looking for an authentic experience in contact with nature, [**history
   <data name="Latest posts" xml:space="preserve">
     <value>Latest posts</value>
   </data>
+  <data name="Rural accommodation" xml:space="preserve">
+    <value>Rural accommodation</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Discover Cortelazor la Real, a charming gem in the Sierra de Aracena</value>
   </data>
@@ -157,5 +160,11 @@ If you're looking for an authentic experience in contact with nature, [**history
   </data>
   <data name="What to do" xml:space="preserve">
     <value>What to do</value>
+  </data>
+  <data name="Where to eat" xml:space="preserve">
+    <value>Where to eat</value>
+  </data>
+  <data name="Where to sleep" xml:space="preserve">
+    <value>Where to sleep</value>
   </data>
 </root>
