--- a/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
+++ b/src/ViveCortelazor/Resources/Views/Home/Index.es.resx
@@ -149,6 +149,9 @@ Si buscas una experiencia auténtica en contacto con la naturaleza, la [**histor
   <data name="Latest posts" xml:space="preserve">
     <value>Últimos posts</value>
   </data>
+  <data name="Rural accommodation" xml:space="preserve">
+    <value>Casa rurales</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Descubre Cortelazor la Real, un rincón con encanto en la Sierra de Aracena</value>
   </data>
@@ -157,5 +160,11 @@ Si buscas una experiencia auténtica en contacto con la naturaleza, la [**histor
   </data>
   <data name="What to do" xml:space="preserve">
     <value>Qué hacer</value>
+  </data>
+  <data name="Where to eat" xml:space="preserve">
+    <value>Dónde comer</value>
+  </data>
+  <data name="Where to sleep" xml:space="preserve">
+    <value>Dónde dormir</value>
   </data>
 </root>
